# phoenix_a3000_verify

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yml
phoenix_a3000_verify/: __init__.py  a3000_csv_converter.py  phoenix_pdf_converter.py  utils.py  verify.py
tests/: test_csv.py  test_pdf.py
